--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
         android:orientation="vertical"
-        tools:context=".base.activity.MainActivity"
+        tools:context=".activity.MainActivity"
         android:padding="20dp"
         android:gravity="center">
 
@@ -39,7 +39,9 @@
             android:textSize="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-    <Button android:text="Login"
+    <Button
+            android:id="@+id/btn_login"
+            android:text="Login"
             android:textSize="20dp"
             android:padding="10dp"
             android:layout_marginTop="20dp"
