--- a/app/src/main/res/layout/register_act.xml
+++ b/app/src/main/res/layout/register_act.xml
@@ -8,6 +8,11 @@
         android:padding="20dp"
         android:gravity="center">
 
+    <ImageView
+            android:scaleType="centerCrop"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_launcher_foreground"/>
     <EditText
             android:background="@color/colorWhite"
             android:textColorHint="@color/colorPrimaryHint"
@@ -17,7 +22,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="text"/>
     <EditText
             android:background="@color/colorWhite"
             android:textColorHint="@color/colorPrimaryHint"
